clean and backup